@@ -1,3 +1,7 @@
+2005-01-28 Peter Debackere  <Peter.Debackere@UGent.be>
+
+	* slab.cpp: First version of of ASR solver.
+
 2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* slab.cpp: Better stability for mirrored slabs.
